# VulnRap.com

./: .dockerignore  .env.example  .gitignore  .prettierignore  .replit  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE.md  README.md  SECURITY.md  all_imports_raw.txt  conflict_block.txt  conflict_test.txt  docker-compose.yml  eslint.config.mjs  imports.txt  lefthook.yml  lighthouserc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit-support-report.md  replit.md  replit.nix  resolve_conflict.py  resolve_tests.py  setup.sh  skills-lock.json  source_files.txt  threat_model.md  tsconfig.json  unique_potential_dead.txt  vulnrap_ui.txt
.github/: dependabot.yml
attached_assets/: Pasted-VulnRap-Comprehensive-Scoring-Overhaul-Development-Prom_1776014480357.txt  REPLIT_DEVELOPMENT_PROMPT_1776015494445.md  blog_building_vulnrap_update_april2026_1776037021734.md
docs/: accessibility.md  avri-drift-runbook.md  avri-scoring-rubric.md  calibration-reviewer-token.md  diagnostics-stripped-crash-trace.md  observability.md  performance.md  resilience.md  self-hosting.md  versioning.md
eval/: .gitignore  README.md  remedis-baseline.json
lib/db/: package.json  (+2 more)
scripts/: build-if-stale-stats.mjs  build-if-stale.mjs  build-if-stale.test.mjs  check-artifact-paths.test.mjs  check-go-sdk-openapi-drift.mjs  check-go-sdk-openapi-drift.test.mjs  codegen-if-stale.mjs  codegen-if-stale.test.mjs  generate-postman.mjs  install-git-hooks.mjs  lefthook-typecheck-touched.mjs  openapi-breaking-diff.mjs  package.json  post-merge.sh  regenerate-24h-recap.mjs  regenerate-24h-recap.test.mjs  regenerate-parallelization-runbook.mjs  regenerate-parallelization-runbook.test.mjs  regenerate-state-of-platform.mjs  regenerate-state-of-platform.test.mjs  release-e2e-check.sh  release-e2e-select.mjs  release.mjs  remedis-harness.sh  scoring-gate-replay.mjs  scoring-gate.sh  verify-codegen.mjs  vulnrap-e2e-check.sh  vulnrap-e2e-register.mjs  vulnrap-e2e-register.test.mjs  vulnrap-e2e-select-specs.mjs  vulnrap-e2e-select-specs.test.mjs
sdks/python/vulnrap/: README.md  __init__.py  async_client.py  client.py  pyproject.toml  types.py
sdks/python/vulnrap/tests/: test_async_client.py  test_client.py
(+756 files in other folders)
