[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "vulnrap"
version = "0.1.0"
description = "Official Python client for the VulnRap API — multi-engine sloppiness scoring, similarity matching, and PII auto-redaction for vulnerability reports."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "VulnRap" }]
keywords = ["vulnrap", "security", "vulnerability", "psirt", "ai-slop", "triage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.21",
]

[project.urls]
Homepage = "https://vulnrap.com"
Documentation = "https://vulnrap.com/api"
Source = "https://github.com/vulnrap/vulnrap"
Issues = "https://github.com/vulnrap/vulnrap/issues"

# The Python source files live alongside this pyproject.toml inside the
# sdks/python/vulnrap/ directory. Map them into the wheel under the
# `vulnrap/` import package via force-include so `import vulnrap` works
# after `pip install`.
[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "vulnrap/__init__.py"
"client.py" = "vulnrap/client.py"
"types.py" = "vulnrap/types.py"
"py.typed" = "vulnrap/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "__init__.py",
    "client.py",
    "types.py",
    "py.typed",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
